# cc-shared-library-deps

./: BUILD.bazel  README.md
lib/: BUILD.bazel  hello.h
